# DA-Project2

./: .gitignore  CMakeLists.txt  Knapsack.drawio  README.md  main.cpp
data/: DATASETS_README.md  Pallets_01.csv  Pallets_02.csv  Pallets_03.csv  Pallets_04.csv  Pallets_05.csv  Pallets_06.csv  Pallets_07.csv  Pallets_08.csv  Pallets_09.csv  Pallets_10.csv  TruckAndPallets_02.csv  TruckAndPallets_03.csv  TruckAndPallets_04.csv  TruckAndPallets_05.csv  TruckAndPallets_06.csv  TruckAndPallets_07.csv  TruckAndPallets_08.csv  TruckAndPallets_09.csv  TruckAndPallets_10.csv
docs/: Doxyfile
docs/html/: _dataparser_8cpp.html  _dataparser_8h.html  _dataparser_8h.js  _dataparser_8h_source.html  _menu_8cpp.html  _menu_8h.html  _menu_8h.js  _menu_8h_source.html  _pallet_8cpp.html  _pallet_8h.html  _pallet_8h.js  _pallet_8h_source.html  _solver_8cpp.html  _solver_8cpp.js  _solver_8h.html  _solver_8h.js  _solver_8h_source.html  _truck_8cpp.html  _truck_8h.html  _truck_8h.js  _truck_8h_source.html  annotated.html  annotated_dup.js  class_data_parser-members.html  class_data_parser.html  class_menu-members.html  class_menu.html  class_menu.js  class_pallet-members.html  class_pallet.html  class_pallet.js  class_truck-members.html  class_truck.html  class_truck.js  classes.html  dir_018e9aafb459e6e1a4953404cb0c0b1d.html  dir_018e9aafb459e6e1a4953404cb0c0b1d.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  (+12 more)
graphs/: DA_Desempenho.ipynb
src/: Dataparser.cpp  Dataparser.h  Menu.cpp  Menu.h  Solver.cpp  Solver.h
(+61 files in other folders)
